# codealong

./: .gitignore  Cargo.toml  LICENSE  README.md
codealong/: Cargo.toml
codealong-cli/: .gitignore  Cargo.toml
codealong-cli/src/: analyze.rs  analyze_repos.rs  build_workspace.rs  cli.yml  config.rs  error.rs  expand_repos.rs  init.rs  initialize_repos.rs  logger.rs  main.rs  repo.rs  ui.rs  utils.rs
codealong-elk/: Cargo.toml  docker-compose.yml
codealong-elk/fixtures/: simple.bundle
codealong-elk/kibana/: Dockerfile
codealong-elk/kibana/data/: .kibana.json
codealong-elk/src/: client.rs  error.rs  event.rs  lib.rs  serialize.rs
codealong-github/: Cargo.toml
codealong-github/src/: analyzed_pull_request.rs  client.rs  config.rs  cursor.rs  error.rs  lib.rs  pull_request.rs  pull_request_analyzer.rs  pull_requests_analyzer.rs  repo.rs  team.rs  user.rs
codealong/config/: js.yml  ruby.yml
codealong/fixtures/configs/: simple.yml
codealong/fixtures/repos/: bare_config.bundle  simple.bundle
codealong/fixtures/workspaces/serde-rs/: config.yml
codealong/src/: analyze_opts.rs  analyzed_commit.rs  analyzed_diff.rs  analyzed_revwalk.rs  analyzer.rs  commit_analyzer.rs  config.rs  config_context.rs  contributor.rs  default_analyzer.rs  diff_analyzer.rs  error.rs  event.rs  fast_blame.rs  file_analyzer.rs  git_blame.rs  hunk_analyzer.rs  identity.rs  lib.rs  line_analyzer.rs  person.rs  repo.rs  repo_analyzer.rs  repo_config.rs  repo_info.rs  test.rs  utils.rs  work_stats.rs  working_config.rs  workspace.rs  workspace_config.rs
src/: analyzed_commit.rs  analyzer.rs  default_analyzer.rs  lib.rs
