[package]
name = "codealong-cli"
version = "0.1.0"
authors = ["Gordon Hempton <ghempton@gmail.com>"]
edition = "2018"

[dependencies]
codealong = { path = "../codealong" }
codealong-elk = { path = "../codealong-elk" }
codealong-github = { path = "../codealong-github" }
clap = {git = "https://github.com/clap-rs/clap", branch = "v3-dev",  features = ["yaml"]}
console = "0.6.2"
dirs = "1.0.4"
error-chain = "0.12"
git2 = "0.7"
indicatif = "0.10.3"
url = "1.7"
