[package]
name = "codealong-elk"
version = "0.1.1"
authors = ["Gordon Hempton <ghempton@gmail.com>"]
description = "Codealong ELK support"
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4"
codealong = { path = "../codealong", version = "0.1.1" }
error-chain = "0.12"
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hostname = "0.1"
