[package]
name = "codealong-github"
version = "0.1.1"
authors = ["Gordon L. Hempton <ghempton@gmail.com>"]
description = "Codealong Github support"
license = "MIT"
edition = "2018"

[dependencies]
codealong = { path = "../codealong", version = "0.1.1" }
chrono = {version = "0.4", features = ["serde"]}
error-chain = "0.12"
git2 = "0.8"
regex = "1"
lazy_static = "1.1.0"
reqwest = "0.9.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog = "2.4"

