[package]
name = "codealong"
version = "0.1.0"
authors = ["ghempton"]

[dependencies]
git2 = "0.7"
glob = "0.2"
chrono = {version = "0.4", features = ["serde"]}
include_dir = "0.2"
regex = "1"
lazy_static = "1.1.0"
linked-hash-map = {version = "0.5.1", features = ["serde_impl"]}
serde = "1.0"
serde_derive = "1.0"
yaml-rust = {version = "*", features = ["preserve_order"]}
serde_yaml = "0.8"
